source/reference/k8s/example-openshift-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: my-external-0
spec:
  host: my-external-0.{redacted}
  to:
    kind: Service
    name: my-external-0
  tls:
    termination: passthrough
---
apiVersion: v1
kind: Route
metadata:
  name: my-external-1
spec:
  host: my-external-1.{redacted}
  to:
    kind: Service
    name: my-external-1
  tls:
    termination: passthrough
---
apiVersion: v1
kind: Route
metadata:
  name: my-external-2
spec:
  host: my-external-2.{redacted}
  to:
    kind: Service
    name: my-external-2
  tls:
    termination: passthrough

...
